feature(main-view.fxml) добавил библиотеку ControlsFX и SpreadsheetView в main-view.fxml