@@ -26,6 +26,13 @@
             <version>16</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -61,6 +68,13 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>ru.miit.coursework/ru.miit.coursework.MainApplication</mainClass>
+                            <!-- Фикс для работы ControlsFX с JDK > 8 версии -->
+                            <options>
+                                <option>--add-exports</option>
+                                <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
+                                <option>--add-exports</option>
+                                <option>javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
